[tool.poetry]
name = "chatgpt_clone"
version = "0.1.0"
description = ""
authors = ["Fernanda Prado <fehfeprado@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
openai = "^0.26.1"
python-dotenv = "^0.21.1"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
